Copy/Pasted in attempt at RMS phase variation calculation

--- a/dev/16-5-4 Atmospheric Shot Noise.ipynb
+++ b/dev/16-5-4 Atmospheric Shot Noise.ipynb
@@ -187,7 +187,7 @@
    },
    "outputs": [],
    "source": [
-    "photons = 1000000\n",
+    "photons = 100000000\n",
     "\n",
     "img_normalized = np.abs(sensor_img)/(np.sum(sensor_img))\n",
     "print(sensor_img.min())\n",
@@ -199,6 +199,59 @@
     "plt.title(\"Total System Response w/ Shot Noise\")\n",
     "\n",
     "print(np.sum(img_shot_noise))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Checking phase mask fluctuation over Fried cell\n",
+    "# At each point possible in the image (away from edges)\n",
+    "#  Save pixels within a square that bounds Fried cell\n",
+    "#  Mask this square by a circular mask\n",
+    "#  Calculate total RMS variance of masked image\n",
+    "# Presently simulation has more than 1 radian RMS\n",
+    "#  variation within R0 diameter\n",
+    "\n",
+    "# Calculate r0 in pixels\n",
+    "r0_p = int(np.round((r0/d_aperture)*nxy))\n",
+    "r0_p_center = (r0_p-1)/2\n",
+    "\n",
+    "# Calculate indices to loop over\n",
+    "i_loop = np.arange(0,nxy-r0_p+1)\n",
+    "\n",
+    "# Create circular mask image\n",
+    "xx,yy = np.meshgrid(np.arange(0,r0_p),np.arange(0,r0_p))\n",
+    "r0_mask = np.sqrt(np.add(np.power(xx-r0_p_center,2),\n",
+    "                  np.power(yy-r0_p_center,2)))\n",
+    "r0_mask = 1*(r0_mask<r0_p/2)\n",
+    "r0_mask_n = np.sum(r0_mask)\n",
+    "\n",
+    "# Create array to hold RMS variations\n",
+    "r0_rms = np.zeros((len(i_loop),len(i_loop)))\n",
+    "\n",
+    "# Loop through y values\n",
+    "for y in i_loop:\n",
+    "    #Calculate bounds of Y data to be copied\n",
+    "    y_bounds = [y,y+r0_p-1]\n",
+    "    # Loop through x values\n",
+    "    for x in i_loop:\n",
+    "        x_bounds = [x,x+r0_p-1]\n",
+    "\n",
+    "        # Mask nearby values to new image\n",
+    "        phase_masked = phase_screen[y_bounds[0]:y_bounds[1]+1,x_bounds[0]:x_bounds[1]+1]\n",
+    "        phase_masked = np.multiply(phase_masked,r0_mask)          \n",
+    "\n",
+    "        # Calculate RMS variation of masked image\n",
+    "        r0_s = np.power(phase_masked,2)\n",
+    "        r0_rms[y,x]=np.power(np.sum(r0_s)/r0_mask_n,0.5)\n",
+    "\n",
+    "r0_rms_avg = np.mean(r0_rms)\n",
+    "print(r0_rms_avg)\n"
    ]
   }
  ],
