added LPF wiener filter and display of wiener effective region

--- a/dev/16-5-13 wiener_filtering.ipynb
+++ b/dev/16-5-13 wiener_filtering.ipynb
@@ -33,8 +33,8 @@
     "deconv = deconvolved()\n",
     "\n",
     "# Define filenames for each target\n",
-    "binary.fits.fileName = \"/home/niels/Documents/FITS/KP336.fits\"\n",
-    "reference.fits.fileName = \"/home/niels/Documents/FITS/KP338.fits\"\n",
+    "binary.fits.fileName = \"/home/niels/Documents/FITS/KP330.fits\"\n",
+    "reference.fits.fileName = \"/home/niels/Documents/FITS/KP331.fits\"\n",
     "\n",
     "# Import each target\n",
     "binary.fits.read(numDimensions=3,printInfo=False)\n",
@@ -56,6 +56,9 @@
    "outputs": [],
    "source": [
     "## Deconvolve reference and binary stars with different methods\n",
+    "nxy = 512\n",
+    "center = int(nxy/2)\n",
+    "\n",
     "# Assign wiener variables\n",
     "H = reference.psd.data\n",
     "G = binary.psd.data\n",
@@ -65,9 +68,29 @@
     "f_hat_inverse = fftshift(np.abs(ifft2(F_hat_inverse)))\n",
     "\n",
     "# Simplified Wiener filtering\n",
-    "k = 1E-2\n",
+    "k = 1E-5\n",
     "F_hat_wiener1 = G*(1/H)*((H**2)/(H**2+k))\n",
-    "f_hat_wiener1 = fftshift(np.abs(ifft2(F_hat_wiener1)))"
+    "f_hat_wiener1 = fftshift(np.abs(ifft2(F_hat_wiener1)))\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.imshow(((H**2)/(H**2+k)))\n",
+    "\n",
+    "# Wiener filtering with LPF for Signal PSD\n",
+    "radius = 30\n",
+    "k = 1E-7\n",
+    "# Create centered meshgrid of image\n",
+    "xx,yy = np.meshgrid(np.arange(nxy),np.arange(nxy))\n",
+    "xx = np.subtract(xx,center)\n",
+    "yy = np.subtract(yy,center)\n",
+    "rr = np.power(np.power(xx,2)+np.power(yy,2),0.5)\n",
+    "# Create LPF filter image\n",
+    "lpf = np.exp(-(np.power(rr,2)/(2*np.power(radius,2))))\n",
+    "\n",
+    "F_hat_wiener2 = G*(1/H)*((H**2)/(H**2+k/lpf))\n",
+    "f_hat_wiener2 = fftshift(np.abs(ifft2(F_hat_wiener2)))\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.imshow(((H**2)/(H**2+k/lpf)))"
    ]
   },
   {
@@ -80,29 +103,19 @@
    "source": [
     "colormap = \"jet\"\n",
     "\n",
-    "plt.figure(figsize = (12,6), dpi = 100)\n",
-    "plt.subplot(1,2,1)\n",
+    "plt.figure(figsize = (16,16), dpi = 100)\n",
+    "plt.subplot(2,2,1)\n",
     "plt.imshow(binary.fits.data[10], cmap=colormap)\n",
     "plt.title(\"Binary Star Image\")\n",
-    "plt.subplot(1,2,2)\n",
+    "plt.subplot(2,2,2)\n",
     "plt.imshow(reference.fits.data[0], cmap=colormap)\n",
     "plt.title(\"Reference Star Image\")\n",
-    "\n",
-    "plt.figure(figsize = (12,6), dpi = 100)\n",
-    "plt.subplot(1,2,1)\n",
+    "plt.subplot(2,2,3)\n",
     "plt.imshow(np.log10(G), cmap=colormap)\n",
     "plt.title(\"Binary Star PSD\")\n",
-    "plt.subplot(1,2,2)\n",
+    "plt.subplot(2,2,4)\n",
     "plt.imshow(np.log10(H), cmap=colormap)\n",
     "plt.title(\"Reference Star PSD\")\n",
-    "\n",
-    "plt.figure(figsize = (12,6), dpi = 100)\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.imshow(np.log10(F_hat_inverse), cmap=colormap)\n",
-    "plt.title(\"Deconvolved PSD\")\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.imshow(f_hat_inverse, cmap=colormap)\n",
-    "plt.title(\"Deconvolved Acorr\")\n",
     "\n",
     "plt.figure(figsize = (12,6), dpi = 100)\n",
     "plt.subplot(1,2,1)\n",
@@ -110,6 +123,14 @@
     "plt.title(\"Deconvolved PSD\")\n",
     "plt.subplot(1,2,2)\n",
     "plt.imshow(f_hat_wiener1, cmap=colormap)\n",
+    "plt.title(\"Deconvolved Acorr\")\n",
+    "\n",
+    "plt.figure(figsize = (12,6), dpi = 100)\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(F_hat_wiener2, cmap=colormap)\n",
+    "plt.title(\"Deconvolved PSD\")\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(f_hat_wiener2, cmap=colormap)\n",
     "plt.title(\"Deconvolved Acorr\")\n"
    ]
   }
